<resources>
    <string name="app_name">MERA</string>

    <string name="create_account">Create Account</string>
    <string name="create_a_new_report">Create a New Report</string>
    <string name="done">Done</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="register">Register</string>
    <string name="name">Name</string>
    <string name="address">Address</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="date">Date of Birth</string>
    <string name="date_case">Date</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="password">Password</string>
    <string name="forgotten_password">Forgotten Password?</string>
    <string name="upload_photo">Upload Photo</string>

    <string name="title"><![CDATA[Application for Complaints of Violence Against Women & Children]]></string>
    <string name="content_description_image">Image</string>
    <string name="description_upload_photo">Upload your photo identity (KTP, SIM)</string>
    <string name="home">Home</string>
    <string name="report">Report</string>
    <string name="profile">Profile</string>
    <string name="rejected">Rejected</string>
    <string name="accepted">Accepted</string>
    <string name="safe_place">Safe Place</string>
    <string name="accompaniment">Accompaniment</string>
    <string name="consultation">Consultation</string>
    <string name="create">Create</string>
    <string name="victim_data">Victim Data</string>
    <string name="case_data">Case Data</string>
    <string name="type">Type</string>
    <string name="cases">Cases</string>
    <string name="description">Description</string>
    <string name="feedback">Feedback</string>
    <string name="tips_for_you">Tips for you :</string>
    <string name="feedback_value">
    1. Lorem ipsum dolor sit amet, consectetur adipiscing elit.\n
    2. Sed blandit eros at lacinia lobortis.\n
    3. Curabitur et nunc ornare, luctus justo vitae, ullamcorper odio.\n
        \n
    4. Nullam commodo quam sit amet pulvinar dictum.\n
    5. Nulla faucibus dui eget massa pellentesque, vitae pretium tortor aliquam.\n
        \n
    6. Donec ornare massa non erat rutrum pharetra.\n
    7. Praesent faucibus tortor ut sem volutpat fringilla.\n
    8. Cras tincidunt mi non leo maximus, ac mollis massa vestibulum.\n
    9. Morbi viverra elit eu eros rutrum, quis vehicula magna pulvinar.\n
    10. Suspendisse sollicitudin mi vel odio ultricies convallis.\n
    </string>
</resources>